Driver Value does not slide along the actual value in the Driver Editor #69573

Closed
opened 2019-09-06 05:52:11 +02:00 by Wayne Dixon · 6 comments

System Information
Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 23:31, hash: 9972d6c306
Worked: 2.79 and previous

Short description of error
The driver value does not animate along the curve like it did in previous versions of blender (2.79 and earlier)

Exact steps for others to reproduce the error
Add a driver to any applicable object.
Animate this value
The value will not slide along the curve.

(See attached videos)
drivers_2.80.mp4

drivers_2.79.mp4

driver_not_animating_along_valueblend.blend

**System Information** Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109 **Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 23:31, hash: `9972d6c306` Worked: 2.79 and previous **Short description of error** The driver value does not animate along the curve like it did in previous versions of blender (2.79 and earlier) **Exact steps for others to reproduce the error** Add a driver to any applicable object. Animate this value The value will not slide along the curve. (See attached videos) [drivers_2.80.mp4](https://archive.blender.org/developer/F7719351/drivers_2.80.mp4) [drivers_2.79.mp4](https://archive.blender.org/developer/F7719352/drivers_2.79.mp4) [driver_not_animating_along_valueblend.blend](https://archive.blender.org/developer/F7719353/driver_not_animating_along_valueblend.blend)
Author

Added subscriber: @WayneDixon

Added subscriber: @WayneDixon

Added subscribers: @dr.sybren, @mano-wii

Added subscribers: @dr.sybren, @mano-wii

I don't quite understand this area ...
@dr.sybren, can you confirm the issue?

I don't quite understand this area ... @dr.sybren, can you confirm the issue?

I can confirm, but for me it only animates the dotted line when it's playing animations (i.e. press space in the 3D viewport) at the same time.

image.png

I can confirm, but for me it only animates the dotted line when it's playing animations (i.e. press space in the 3D viewport) at the same time. ![image.png](https://archive.blender.org/developer/F7773486/image.png)
Sybren A. Stüvel self-assigned this 2019-09-24 16:27:12 +02:00

This issue was referenced by fbfa904bce

This issue was referenced by fbfa904bce9b852a2bc3efaac339f34362e16944

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69573
No description provided.